kubernetes/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre
spec:
  selector:
    app: calibre-web
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  type: ClusterIP
